manifests/handson/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-deployment

spec:
  replicas: 1
  selector:
    matchLabels:
      app: test
  template:
    metadata:
      labels:
          app: test
    spec:
      containers:
      - name: test
        image: nginx
        ports:
        - containerPort: 80
