manifests/handson/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod

spec:
  containers:
    - name: test-container
      image: nginx
      ports:
        - containerPort: 80
