manifests/handson/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: test-statefulset

spec:
  serviceName: "test-statefulset"
  replicas: 1
  selector:
    matchLabels:
      app: test-statefulset
  template:
    metadata:
      labels:
          app: test-statefulset
    spec:
      containers:
      - name: test-statefulset
        image: nginx
        ports:
        - containerPort: 80
#  volumeClaimTemplates:
#  - metadata:
#      name: test-statefulset
#    spec:
#      accessModes: [ "ReadWriteOnce" ]
#      resources:
#        requests:
#          storage: 1Gi
