manifests/handson/volume.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
spec:
    containers:
      - name: test-pod
        image: ubuntu
        volumeMounts:
          - mountPath: "/mnt/data"
            name: test-volume
        command: ["sleep", "1000000"]
    volumes:
        - name: test-volume
          persistentVolumeClaim:
            claimName: local-claim
