manifests/handson/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-service

spec:
#  type: ClusterIP
  type: LoadBalancer
  selector:
    app: test
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
