manifests/handson/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress

spec:
  rules:
  - host: test.test.k8s.tadaren.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
              name: test-service
              port:
                number: 8080
